--- a/index.html
+++ b/index.html
@@ -5,9 +5,42 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/nav.css">
+	<title>BetterNYC - Home</title>
 </head>
 <body>
-  <h1>Test</h1>
+	<nav>
+		<div class="title"><span>BETTER</span>NYC</div>
+		<ul>
+			<a href="">
+				<li>Home</li>
+			</a>
+			<a href="apartment">
+				<li>Apartments</li>
+			</a>
+			<a href="login">
+				<li>Log In</li>
+			</a>
+		</ul>
+	</nav>
+
+	<object type="image/xml+svg" data="background.svg" width="100%"  height="100%">
+		<img src="background.svg" alt="Divider" id="">
+	</object>
+
+	<div class="content">
+		<div class="topContent">
+			<h1>Title</h1>
+			<div>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque quos inventore quia quo officiis, minus dolorum nobis impedit exercitationem maiores repellendus amet quae nostrum. Maiores necessitatibus reiciendis quasi omnis ipsa provident asperiores quis itaque deserunt placeat, sed nostrum fugiat porro distinctio architecto corporis repellat hic odit molestias voluptas doloremque, incidunt, nihil ea explicabo. Mollitia tempore, voluptatem dicta alias quibusdam aperiam commodi explicabo nemo veritatis, sit laboriosam. Sed, rerum, molestiae? Quidem pariatur a neque, quasi corrupti autem quaerat maxime nulla velit consequuntur quam aperiam ratione ea ipsam eum obcaecati quos saepe optio voluptatem sint cupiditate eius. Voluptate optio sed architecto perspiciatis?
+			</div>
+		</div>
+		<div class="bottomContent">
+			<div>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id alias voluptatibus fuga ullam magni commodi facilis cumque perferendis voluptatem explicabo minima maxime ducimus ab nulla modi, culpa porro repellendus, dolorum, fugiat velit vero aspernatur. Nam rerum tenetur quisquam, eligendi voluptatem accusamus similique aliquam repellat, adipisci ducimus fuga veniam, placeat doloremque. Dolor quia impedit est libero repudiandae, quibusdam. Excepturi dolores fugiat quis repudiandae doloremque enim possimus suscipit culpa explicabo. Nemo quas quaerat adipisci? Vero officia, possimus nisi corrupti totam voluptatibus at voluptate velit quo quae, modi rerum, veritatis ipsa harum nostrum placeat dicta? Ipsum voluptates quo labore. Pariatur voluptatem, labore autem.
+			</div>
+		</div>
+	</div>
 </body>
 </html>
