Added more stuff...

--- a/index.html
+++ b/index.html
@@ -25,20 +25,23 @@
 		</ul>
 	</nav>
 
+	<img src="background.png" id="background-image">
+
 	<object type="image/xml+svg" data="background.svg" width="100%"  height="100%">
 		<img src="background.svg" alt="Divider" id="">
 	</object>
+	<div class="filler"></div>
 
 	<div class="content">
-		<div class="topContent">
-			<h1>Title</h1>
+		<div class="topContent cont">
+			<h1>Reason for Existing</h1>
 			<div>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque quos inventore quia quo officiis, minus dolorum nobis impedit exercitationem maiores repellendus amet quae nostrum. Maiores necessitatibus reiciendis quasi omnis ipsa provident asperiores quis itaque deserunt placeat, sed nostrum fugiat porro distinctio architecto corporis repellat hic odit molestias voluptas doloremque, incidunt, nihil ea explicabo. Mollitia tempore, voluptatem dicta alias quibusdam aperiam commodi explicabo nemo veritatis, sit laboriosam. Sed, rerum, molestiae? Quidem pariatur a neque, quasi corrupti autem quaerat maxime nulla velit consequuntur quam aperiam ratione ea ipsam eum obcaecati quos saepe optio voluptatem sint cupiditate eius. Voluptate optio sed architecto perspiciatis?
+				Living in a big city like New York can be amazing and a dream come true for some people. But along with the benefits of living here, there are some drawbacks. One of the main struggles that people have with living in New York City is the cost of rent. Most people live in apartments and have to pay rent to their landlords. It’s difficult for people to pay their rent on time, let alone the full amount. And due to landlords not being able to get their expected income, they have to raise the rent which would cause the tennant a harder time to pay everything towards the rent.
 			</div>
 		</div>
-		<div class="bottomContent">
+		<div class="bottomContent cont">
 			<div>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id alias voluptatibus fuga ullam magni commodi facilis cumque perferendis voluptatem explicabo minima maxime ducimus ab nulla modi, culpa porro repellendus, dolorum, fugiat velit vero aspernatur. Nam rerum tenetur quisquam, eligendi voluptatem accusamus similique aliquam repellat, adipisci ducimus fuga veniam, placeat doloremque. Dolor quia impedit est libero repudiandae, quibusdam. Excepturi dolores fugiat quis repudiandae doloremque enim possimus suscipit culpa explicabo. Nemo quas quaerat adipisci? Vero officia, possimus nisi corrupti totam voluptatibus at voluptate velit quo quae, modi rerum, veritatis ipsa harum nostrum placeat dicta? Ipsum voluptates quo labore. Pariatur voluptatem, labore autem.
+				Our idea, BetterNYC, is a service that would assist tenants by helping them pay their rent on time in the full amount. Here’s how it would work. BetterNYC would partner up with bank(s) that would provide credit cards that are linked with the BetterNYC services. Then we would use the credit cards to meet an agreement with the landlord of the apartments and have the tenants pay their rent with the card. When the tenants would pay the rent on time consistently, they would receive bonuses on their card that would help them pay the rent for the upcoming months. Like a reward system.
 			</div>
 		</div>
 	</div>
