--- a/login/index.html
+++ b/login/index.html
@@ -28,13 +28,15 @@
 		<form>
 		<h1>SIGN UP</h1>
 			<div class="cont">
-				<input type="text" name="email" placeholder="Email">
-				<input type="password" name="password" placeholder="Password">
-				<input type="button" value="Sign In">
+				<input type="text" name="email" placeholder="Email" required>
+				<input type="password" name="password" placeholder="Password" required>
+				<input type="submit" value="Sign In">
 				<span>Don't have an account? <a data="link" href="sign.html">Sign Up</a></span>
 			</div>
 		</form>
-		<div class="left"></div>
+		<div class="left">
+			<img src="../background-log.png" id="background-image">
+		</div>
 	</div>
 </body>
 </html>
