--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<a href="apartment">
 				<li>Apartments</li>
 			</a>
-			<a href="login">
+			<a href="signin">
 				<li>Log In</li>
 			</a>
 		</ul>
