--- a/signin/index.html
+++ b/signin/index.html
@@ -26,12 +26,12 @@
 
 	<div class="container">
 		<form>
-		<h1>SIGN UP</h1>
+		<h1>SIGN IN</h1>
 			<div class="cont">
 				<input type="text" name="email" placeholder="Email" required>
 				<input type="password" name="password" placeholder="Password" required>
 				<input type="submit" value="Sign In">
-				<span>Don't have an account? <a data="link" href="sign.html">Sign Up</a></span>
+				<span>Don't have an account? <a data="link" href="../signup">Sign Up</a></span>
 			</div>
 		</form>
 		<div class="left">
