--- a/apartment/index.html
+++ b/apartment/index.html
@@ -18,7 +18,7 @@
 			<a href="">
 				<li>Apartments</li>
 			</a>
-			<a href="../login">
+			<a href="../signin">
 				<li>Log In</li>
 			</a>
 		</ul>
